# src/main/java/com/example/bookstore/persistence/jpa/entity/AuthorEntity.java
@@ -1,0 +1,30 @@
+package com.example.bookstore.persistence.jpa.entity;
+
+import jakarta.persistence.*;
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+import java.time.LocalDate;
+
+@Entity
+@Data
+public class AuthorEntity {
+
+    @Id
+    @GeneratedValue(strategy = GenerationType.IDENTITY)
+    @Column(name = "id", updatable = false, nullable = false)
+    private Long id;
+
+    @Column(name = "first_name", nullable = false, length = 100)
+    private String firstName;
+    @Column(name = "last_name", nullable = false, length = 100)
+    private String lastName;
+    @Column(name = "email", nullable = false, length = 200)
+    private String email;
+    @Column(name = "biogra", nullable = false, columnDefinition = "TEXT")
+    private String biography;
+    @Column(name = "birth_date", nullable = false, columnDefinition = "DATE")
+    private LocalDate birthDate;
+}
